fix: select disable, scrollbar hide

--- a/src/App.css
+++ b/src/App.css
@@ -122,8 +122,7 @@ h6 {
 /* SCROLLBAR */
 
 /* width */
-::-webkit-scrollbar,
-::-moz-scrollbar {
+::-webkit-scrollbar {
     display: none;
 }
 
